--- a/css/livepreview-demo.css
+++ b/css/livepreview-demo.css
@@ -1,58 +1,111 @@
 /*** Styles for Live Preview Window ***/
 
-#livepreview_dialog
-{   
+#livepreview_iframe {
+    box-shadow: inset 5px 5px 10px #666;
+    -moz-box-shadow: inset 5 5px 10px #666;
+    -webkit-box-shadow: inset 5 5px 10px #666;
+}
+
+#livepreview_dialog {
     padding:0px;
-    height:200px;
+    height:200px;  
     width:300px;
     background-color:#fff;
     background-image:url('/images/icon_loading.gif');
     background-repeat:no-repeat;
     background-position:center center;
     position:absolute;
-    border:solid 5px #999;
+    border:solid 5px #666;
     border-radius:5px;
     -moz-border-radius: 5px;
     -webkit-border-radius:5px;
 }
 
-#livepreview_dialog.left:after, #livepreview_dialog.left:before {
+#livepreview_dialog:after, #livepreview_dialog:before {
     border: solid transparent;
     content: " ";
     height: 0;
     width: 0;
     position: absolute;
     pointer-events: none;
+}
+
+#livepreview_dialog.bottom:after, #livepreview_dialog.bottom:before {
+    bottom: 100%;
+    left: 50%;
+}
+
+#livepreview_dialog.bottom:after {
+    border-color: rgba(255, 255, 255, 0);
+    border-bottom-color: #ffffffff;
+    border-width: 20px; 
+    margin-left: -20px;
+}
+#livepreview_dialog.bottom:before {
+    border-color: rgba(102, 102, 102, 0);
+    border-bottom-color: #666666;
+    border-width: 26px;
+    margin-left: -26px;
+}
+
+#livepreview_dialog.top:after, #livepreview_dialog.top:before {
+    top: 100%;
+    left: 50%;
+}
+
+#livepreview_dialog.top:after {
+    border-color: rgba(255, 255, 255, 0);
+    border-top-color: #ffffffff;
+    border-width: 20px;
+    margin-left: -20px;
+}
+
+#livepreview_dialog.top:before {
+    border-color: rgba(102, 102, 102, 0);
+    border-top-color: #666666;
+    border-width: 26px;
+    margin-left: -26px;
+}
+
+#livepreview_dialog.right:after, #livepreview_dialog.right:before {
+    right: 100%;
+    top: 50%;
+}
+
+#livepreview_dialog.right:after {
+    border-color: rgba(255, 255, 255, 0);
+    border-right-color: #ffffffff;
+    border-width: 20px;
+    margin-top: -20px;
 }
 
 #livepreview_dialog.right:before {
-    left: 0px;
-    margin-left:-45px;
-    border: solid transparent;
-    content: " ";
-    height: 0;
-    width: 0;
-    position: absolute;
-    pointer-events: none;
-    border-right-color: #999;
-    border-width: 20px;
-    top: 50%;
-    margin-top: -20px;
+    border-color: rgba(102, 102, 102, 0);
+    border-right-color: #666666;
+    border-width: 26px;
+    margin-top: -26px;
 }
 
+#livepreview_dialog.left, #livepreview_dialog.left:before {
+    left: 100%;
+    top: 50%;
+}
 
 #livepreview_dialog.left:after {
-    right:0;
-    margin-right:-45px;
-    border-left-color: #999;
+    border-color: rgba(255, 255, 255, 0);
+    border-left-color: #ffffffff;
     border-width: 20px;
-    top: 50%;
     margin-top: -20px;
 }
 
-#livepreview_iframe {
-    box-shadow: inset 5px 5px 10px #666;
-    -moz-box-shadow: inset 5 5px 10px #666;
-    -webkit-box-shadow: inset 5 5px 10px #666;
-
+#livepreview_dialog.left:before {
+    border-color: rgba(102, 102, 102, 0);
+    border-left-color: #666666;
+    border-width: 26px;
+    margin-top: -26px;
 }
+
+
+
+
+
